--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 </head>
 
 <body>
+    <!-- Scroll up button -->
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
     </div>
+
+    <!-- Navbar Section -->
     <header class="header">
         <nav class="content">
             <div class="logo">
@@ -67,7 +70,8 @@
                     <p>I am a hard-working and driven individual who isn't afraid to face a challenge. I'm passionate
                         about my work and I know how to get the job done. I would describe myself as an open and honest
                         person who doesn't believe in misleading other people and tries to be fair in everything I do.
-                        <a href="images/Aditi Jaiswal Resume.pdf"><button class="download-btn">Download CV</button></a>
+                        <a href="assets/Akanksha_Sakpal_Resume.pdf"><button class="download-btn">Download
+                                CV</button></a>
                 </div>
             </div>
         </div>
@@ -81,29 +85,48 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">Colthing E-commerce System</div>
-                        <p>In this project I have created an e-commerce website for clothing brand using React JS, Css,
-                            Bootstrap and JSON file to store the data.</p>
+                        <div class="text">Colthing Brand Website</div>
+                        <p>Developed an UI for clothing brand using React JS. Leveraging Formik for form management.
+                            Implemented user authentication, stored user inputs in local storage, and managed data
+                            through a centralized JSON file. Use the React Context API for state handling, and
+                            react-router-dom for dynamic routing. Additionally, I designed a responsive UI with CSS and
+                            Bootstrap, ensuring cross-device compatibility.</p>
                     </div>
                 </div>
+
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Weather App</div>
-                        <p>In this project i have created a weather app project using React JS, Css, Tailwind Css and
-                            Open weather api for fetching weather data in real time.</p>
+                        <p>In this project, I have created a weather app project using React JS. Use CSS, Tailwind CSS
+                            to styling the appliation.
+                            Use Open weather api for fetching weather data in real time. I also utilized Tostify for
+                            Notifications.</p>
                     </div>
                 </div>
+
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Food Website</div>
-                        <p>In this project I have created an e-commerce website for food using Html, Css, Tailwind Css,
-                            Bootstrap, React JS, Tostify for Notifications and Fetch API</p>
+                        <p>Developed an UI for Food Website for store using React. Key features include Add to Cart and
+                            Wishlist functionality, while the UI was styled using CSS, Tailwind CSS, and
+                            components from Material-UI, React Bootstrap, and Bootstrap. I also utilized React-antd for
+                            Notifications and integrating external APIs for product data with
+                            Axios and managing user inputs via local storage.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Eduvalt ed-Tech Platform</div>
+                        <p>Developed Eduvalt, a responsive UI for ed-Tech platform using React, aimed at providing a
+                            seamless user experience across all devices. The platform features responsive design using
+                            CSS and Bootstrap, along with engaging animations to enhance user interaction. </p>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </section>
 
@@ -234,12 +257,15 @@
         </div>
     </section>
 
+    <!-- Footer Section -->
     <footer>
         <a href="https://www.facebook.com/akansha.sakpal.1"><i class="fa-brands fa-facebook"></i></a>
         <a href="https://www.instagram.com/akan_ksha_2/"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/akanksha-sakpal-142b33239/"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/SakpalA"><i class="fa-brands fa-github"></i></a>
     </footer>
+
+    <!-- Script -->
     <script src="./script.js"></script>
 </body>
 
