add memory game Project

--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
                             CSS and Bootstrap, along with engaging animations to enhance user interaction. </p>
                     </div>
                 </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Memory Game</div>
+                        <p>The Memory Game built with ReactJS challenges users to match pairs of cards by flipping them over. It uses React's state management to track card states, a shuffle function to randomize cards, and smooth flip animations for an engaging user experience. The game is responsive across devices and includes a reset feature to reshuffle and restart the game.</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
