--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <!-- Scroll up button -->
     <div class="scroll-up-btn">
-        <i class="fas fa-angle-up"></i>
+        <i class="fa-angle-up fas"></i>
     </div>
 
     <!-- Navbar Section -->
@@ -42,14 +42,14 @@
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
-                <i class="fa-solid fa-bars"></i>
+                <i class="fa-bars fa-solid"></i>
             </div>
         </nav>
     </header>
 
     <!-- Home Section -->
     <section id="home" class="home">
-        <div class="home-content content">
+        <div class="content home-content">
             <h4>Hello, my name is</h4>
             <h1 class="name">Akanksha Sakpal</h1>
             <h3>And I'm a <span class="typing"></span></h3>
@@ -62,15 +62,16 @@
         <div class="content">
             <h2 class="title">About me</h2>
             <div class="about-content">
-                <div class="column left">
+                <div class="left column">
                     <img src="./assets/myPhoto.jpg" alt="">
                 </div>
-                <div class="column right">
+                <div class="right column">
                     <div class="text">I'm Akanksha and I'm a <span class="typing-2"></span></div>
                     <p>I am a hard-working and driven individual who isn't afraid to face a challenge. I'm passionate
                         about my work and I know how to get the job done. I would describe myself as an open and honest
                         person who doesn't believe in misleading other people and tries to be fair in everything I do.
-                        <a href="assets/Akanksha_Sakpal_Resume.pdf"><button class="download-btn">Download
+                        <a href="/assets/Akanksha_Sakpal_Frontend_Developer_Resume.pdf"><button
+                                class="download-btn">Download
                                 CV</button></a>
                 </div>
             </div>
@@ -84,7 +85,7 @@
             <div class="service-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
+                        <i class="fa-paint-brush fas"></i>
                         <div class="text">Colthing Brand Website</div>
                         <p>Developed an UI for clothing brand using React JS. Leveraging Formik for form management.
                             Implemented user authentication, stored user inputs in local storage, and managed data
@@ -96,7 +97,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fa-chart-line fas"></i>
                         <div class="text">Weather App</div>
                         <p>In this project, I have created a weather app project using React JS. Use CSS, Tailwind CSS
                             to styling the appliation.
@@ -107,7 +108,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
+                        <i class="fa-code fas"></i>
                         <div class="text">Food Website</div>
                         <p>Developed an UI for Food Website for store using React. Key features include Add to Cart and
                             Wishlist functionality, while the UI was styled using CSS, Tailwind CSS, and
@@ -119,7 +120,7 @@
 
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
+                        <i class="fa-code fas"></i>
                         <div class="text">Eduvalt ed-Tech Platform</div>
                         <p>Developed Eduvalt, a responsive UI for ed-Tech platform using React, aimed at providing a
                             seamless user experience across all devices. The platform features responsive design using
@@ -129,9 +130,20 @@
 
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
+                        <i class="fa-code fas"></i>
                         <div class="text">Memory Game</div>
-                        <p>The Memory Game built with ReactJS challenges users to match pairs of cards by flipping them over. It uses React's state management to track card states, a shuffle function to randomize cards, and smooth flip animations for an engaging user experience. The game is responsive across devices and includes a reset feature to reshuffle and restart the game.</p>
+                        <p>The Memory Game built with ReactJS challenges users to match pairs of cards by flipping them
+                            over. It uses React's state management to track card states, a shuffle function to randomize
+                            cards, and smooth flip animations for an engaging user experience. The game is responsive
+                            across devices and includes a reset feature to reshuffle and restart the game.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fa-code fas"></i>
+                        <div class="text">Movie Application</div>
+                        <p>movie application is a React.js-based project that allows users to search for movies. It employs useState for state management, useEffect to handle side effects, and Axios for fetching data from an API. The application uses react-router-dom for component navigation and useContext for efficient data sharing across components, ensuring a smooth and intuitive user experience.</p>
                     </div>
                 </div>
 
@@ -144,7 +156,7 @@
         <div class="content">
             <h2 class="title">Skills</h2>
             <div class="skill-content">
-                <div class="column left">
+                <div class="left column">
                     <div class="text">My creative skills & experiences.</div>
                     <p>An enthusiastic fresher with highly inspiring leadership skills. Always want to learn and enhance
                         my skills in Development field and Flourishing my talent to harness it in the best possible way.
@@ -152,20 +164,20 @@
                         methodologies.</p>
                     <a href="#home"><button class="read-more">Read more</button></a>
                 </div>
-                <div class="column right">
+                <div class="right column">
                     <div class="bars">
                         <div class="info">
                             <span>HTML</span>
                             <span>80%</span>
                         </div>
-                        <div class="line html"></div>
+                        <div class="html line"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
                             <span>60%</span>
                         </div>
-                        <div class="line css"></div>
+                        <div class="css line"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
@@ -179,21 +191,21 @@
                             <span>Bootstrap</span>
                             <span>60%</span>
                         </div>
-                        <div class="line bootstrap"></div>
+                        <div class="bootstrap line"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>jQuery</span>
                             <span>50%</span>
                         </div>
-                        <div class="line jquery"></div>
+                        <div class="jquery line"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
                             <span>60%</span>
                         </div>
-                        <div class="line js"></div>
+                        <div class="js line"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
@@ -212,26 +224,26 @@
         <div class="content">
             <h2 class="title">Contact Me</h2>
             <div class="contact-content">
-                <div class="column left">
+                <div class="left column">
                     <div class="text">Get in Touch</div>
                     <p>Feel Free To Contact Me</p>
                     <div class="icons">
                         <div class="rows">
-                            <i class="fas fa-user"></i>
+                            <i class="fa-user fas"></i>
                             <div class="info">
                                 <div class="head">Name</div>
                                 <div class="sub-title">Akanksha Sakpal</div>
                             </div>
                         </div>
                         <div class="rows">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fa-map-marker-alt fas"></i>
                             <div class="info">
                                 <div class="head">Address</div>
                                 <div class="sub-title">Mumbai, Maharashtra</div>
                             </div>
                         </div>
                         <div class="rows">
-                            <i class="fas fa-envelope"></i>
+                            <i class="fa-envelope fas"></i>
                             <div class="info">
                                 <div class="head">Email</div>
                                 <div class="sub-title">akankshasakpal2@gmail.com</div>
@@ -239,7 +251,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="column right">
+                <div class="right column">
                     <div class="text">Message me</div>
                     <form action="https://api.web3forms.com/submit" method="POST">
                         <input type="hidden" name="access_key" value="49d24dba-b61a-4901-84fb-3c391a83bcd5">
@@ -247,7 +259,7 @@
                             <div class="field fname">
                                 <input type="text" name="name" placeholder="Name" required>
                             </div>
-                            <div class="field email">
+                            <div class="email field">
                                 <input type="email" name="email" placeholder="Email" required>
                             </div>
                         </div>
